--- a/projectchar.html
+++ b/projectchar.html
@@ -28,20 +28,54 @@
 
 		<div class="container clearfix">
 			<ul class="container__navmenu">
-				<li><a href="#">Marvel</a></li>
+				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Comics</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contacts</a></li>
-				<li><a href="#">Dc</a></li>
+				<li><a href="projectdc.html">Dc</a></li>
 			</ul>
 		</div>
 	</div>
 
 	<div class="content">
-		
+
+		<div class="content__info">
+			<h1>Batman</h1>
+			<h3>Dc</h3>
+			<h5>First Appearance - 1939 March<br/>Bill Finger/Bob Kane</h5>
+		</div>
+
+		<div class="content__section">
+
+			<div class="section__block">
+				<img src="img/batstatue.png">
+			</div>
+
+			<div class="section__block">
+				<p>Batman is a fictional superhero appearing in American comic books published by DC Comics. The character was created by artist Bob Kane and writer Bill Finger, and first appeared in Detective Comics #27 (1939). Originally named the "Bat-Man", the character is also referred to by such epithets as the Caped Crusader, the Dark Knight, and the World's Greatest Detective.
+				Batman's secret identity is Bruce Wayne, an American billionaire, playboy, philanthropist, and owner of Wayne Enterprises. After witnessing the murder of his parents Thomas Wayne and Martha Wayne as a child, he swore vengeance against criminals, an oath tempered by a sense of justice. Wayne trains himself physically and intellectually and crafts a bat-inspired persona to fight crime. Batman operates in the fictional Gotham City, with assistance from various supporting characters, including his butler Alfred, police commissioner Gordon, and vigilante allies such as Robin.</p>
+			</div>
+		</div>
+
+		<div class="section__addinfo">
+			<h3>Some more interesting facts about him.</h3>
+		</div>
+
+
+		<div class="section__slider">
+				<img src="img/batslider.png">
+		</div>
+
 	</div>
-	
+
 </div>
+
+		<div class="footer">
+		<h1 class="footer__text">
+		Comicsproject Demo Website <br/> 
+		For More Information Check Out The Contacts Section
+		</h1>
+		</div>
 </body>
 </html>
