--- a/projectdc.html
+++ b/projectdc.html
@@ -28,12 +28,12 @@
 
 		<div class="container clearfix">
 			<ul class="container__navmenu">
-				<li><a href="#">Marvel</a></li>
+				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Comics</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contacts</a></li>
-				<li><a href="#">Dc</a></li>
+				<li><a href="projectdc.html">Dc</a></li>
 			</ul>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			</div>
 			
 			<div class="content__item">
-				<a href="#"><img src="img/d2.png"></a>
+				<a href="projectchar.html"><img src="img/d2.png"></a>
 			</div>
 
 			<div class="content__item">
@@ -119,7 +119,7 @@
 				</div>
 
 				<div class="prefooter__block">
-				<a href="#"><img src="img/dclogo.png"></a>
+				<a href="http://www.dccomics.com/"><img src="img/dclogo.png"></a>
 				</div>
 
 				<div class="prefooter__block">
