--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="mainstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.jpg" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
 	<title>ComicsProject | Main</title>
@@ -29,10 +29,10 @@
 		<div class="container clearfix">
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">News</a></li>
-				<li><a href="#">Comics</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contacts</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Комиксы</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
 			</ul>
 		</div>
@@ -64,7 +64,7 @@
 	<div class="footer">
 		<h1 class="footer__text">
 		Comicsproject Demo Website <br/> 
-		For More Information Check Out The Contacts Section
+		Для дополнительной информации откройте вкладку контакты.
 		</h1>
 	</div>
 
