--- a/projectchar.html
+++ b/projectchar.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="charstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.jpg" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
 	<title>ComicsProject | Batman</title>
@@ -29,10 +29,10 @@
 		<div class="container clearfix">
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">News</a></li>
-				<li><a href="#">Comics</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contacts</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Комиксы</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
 			</ul>
 		</div>
@@ -43,7 +43,7 @@
 		<div class="content__info">
 			<h1>Batman</h1>
 			<h3>Dc</h3>
-			<h5>First Appearance - 1939 March<br/>Bill Finger/Bob Kane</h5>
+			<h5>Первое появление - 1939 Март<br/>Bill Finger/Bob Kane</h5>
 		</div>
 
 		<div class="content__section">
@@ -59,7 +59,7 @@
 		</div>
 
 		<div class="section__addinfo">
-			<h3>Some more interesting facts about him.</h3>
+			<h3>Больше интересных фактов о герое.</h3>
 		</div>
 
 
@@ -74,7 +74,7 @@
 		<div class="footer">
 		<h1 class="footer__text">
 		Comicsproject Demo Website <br/> 
-		For More Information Check Out The Contacts Section
+		Для дополнительной информации откройте вкладку контакты.
 		</h1>
 		</div>
 </body>
