--- a/projectmarvel.html
+++ b/projectmarvel.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="marvelstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.jpg" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
 	<title>ComicsProject | MARVEL</title>
@@ -29,10 +29,10 @@
 		<div class="container clearfix">
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">News</a></li>
-				<li><a href="#">Comics</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contacts</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Комиксы</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
 			</ul>
 		</div>
@@ -44,7 +44,7 @@
 		<div class="content__banner clearfix"></div>
 	
 			<div class="content__text">
-				<h1>Check Out The <br/> Most Popular Characters</h1>
+				<h1>Самые популярные <br/>Персонажи Издательства</h1>
 			</div>
 
 		<div class="content__logos clearfix">
@@ -115,7 +115,7 @@
 		<div class="content__prefooter">
 
 				<div class="prefooter__block">
-				<h1>More Information<br/>And Comics</h1>
+				<h1>Больше интересного</h1>
 				</div>
 
 				<div class="prefooter__block">
@@ -123,7 +123,7 @@
 				</div>
 
 				<div class="prefooter__block">
-				<h1>On The Official<br/>Company's Website</h1>
+				<h1>На сайте<br/>Издательства</h1>
 				</div>
 
 		</div>
@@ -133,7 +133,7 @@
 	<div class="footer">
 		<h1 class="footer__text">
 		Comicsproject Demo Website <br/> 
-		For More Information Check Out The Contacts Section
+		Для дополнительной информации откройте вкладку контакты.
 		</h1>
 	</div>
 </body>
