--- a/projectchar.html
+++ b/projectchar.html
@@ -22,7 +22,7 @@
 
 	<div class="header">
 		<div class="header__text">
-		<h1>Comicsproject</h1>
+		<a href="projectmain.html"><h1>Comicsproject</h1></a>
 		</div>
 
 
@@ -53,8 +53,8 @@
 			</div>
 
 			<div class="section__block">
-				<p>Batman is a fictional superhero appearing in American comic books published by DC Comics. The character was created by artist Bob Kane and writer Bill Finger, and first appeared in Detective Comics #27 (1939). Originally named the "Bat-Man", the character is also referred to by such epithets as the Caped Crusader, the Dark Knight, and the World's Greatest Detective.
-				Batman's secret identity is Bruce Wayne, an American billionaire, playboy, philanthropist, and owner of Wayne Enterprises. After witnessing the murder of his parents Thomas Wayne and Martha Wayne as a child, he swore vengeance against criminals, an oath tempered by a sense of justice. Wayne trains himself physically and intellectually and crafts a bat-inspired persona to fight crime. Batman operates in the fictional Gotham City, with assistance from various supporting characters, including his butler Alfred, police commissioner Gordon, and vigilante allies such as Robin.</p>
+				<p>Наряду с Суперменом, Бэтмен является одним из самых популярных и известных героев комиксов.
+				В оригинальной версии биографии Бэтмен — тайное альтер-эго миллиардера Брюса Уэйна, успешного промышленника, филантропа и любимца женщин. Став свидетелем убийства своих родителей, Брюс поклялся посвятить свою жизнь искоренению преступности и борьбе за справедливость. Место действия историй о Бэтмене — вымышленный американский город Готэм, созданный на основе Чикаго с элементами Нью-Йорка. При содействии нескольких второстепенных персонажей, в том числе его напарника Робина, дворецкого Альфреда, комиссара полиции Джеймса Гордона, а также иногда супергероини Бэтгёрл, Бэтмен противостоит преступному сообществу, коррумпированным политикам и продажным представителям власти Готема, а также группе злодеев, среди которых Джокер, Двуликий, Ядовитый Плющ, Пингвин, Пугало. В отличие от большинства супергероев, Бэтмен не обладает сверхспособностями, а использует свой интеллект, навыки боевых искусств, познания в науке и технике, а также несгибаемую волю, способность внушать страх и запугивать своих врагов. В отличие от преступников, которым он противостоит, Бэтмен никогда никого не убивает и никогда никому не мстит. С момента своего появления Бэтмен почти сразу обрёл популярность и получил серию комиксов.</p>
 			</div>
 		</div>
 
