--- a/projectmarvel.html
+++ b/projectmarvel.html
@@ -22,7 +22,7 @@
 
 	<div class="header">
 		<div class="header__text">
-		<h1>Comicsproject</h1>
+		<a href="projectmain.html"><h1>Comicsproject</h1></a>
 		</div>
 
 
@@ -44,7 +44,7 @@
 		<div class="content__banner clearfix"></div>
 	
 			<div class="content__text">
-				<h1>Самые популярные <br/>Персонажи Издательства</h1>
+				<h1>Самые популярные<br/>Персонажи Издательства</h1>
 			</div>
 
 		<div class="content__logos clearfix">
