--- a/projectchar.html
+++ b/projectchar.html
@@ -22,7 +22,7 @@
 
 	<div class="header">
 		<div class="header__text">
-		<a href="projectmain.html"><h1>Comicsproject</h1></a>
+		<a href="index.html"><h1>Comicsproject</h1></a>
 		</div>
 
 
