--- a/projectcontacts.html
+++ b/projectcontacts.html
@@ -4,12 +4,12 @@
 	
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="mainstyles.css">
+	<link rel="stylesheet" href="contactsstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.jpg" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
-	<title>ComicsProject | Main</title>
+	<title>ComicsProject | Контакты</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/
@@ -38,25 +38,33 @@
 		</div>
 	</div>
 
+
 	<div class="content" class="box">
-
-		<div class="picture clearfix">
-				<div class="picture__item1 SW"></div>
-
-				<div class="picture__item2 BATMAN"></div>
+		
+		<div class="text__block">
+			<h1>Мы готовы к сотрудничеству, наши контакты представлены ниже:</h1>
 		</div>
 
-		<div class="picture clearfix">
-				<div class="picture__item3 FLASH"></div>
+		<div class="links__section">
 
-				<div class="picture__item4 SPIDER"></div>
+		<div class="link__item">
+			<a href="www.facebook.com/‎"><img src="img/fblogo.png"></a>
 		</div>
 
-		<div class="picture clearfix">
-				<div class="picture__item5 SUPER"></div>
-
-				<div class="picture__item6 IRON"></div>
+		<div class="link__item">
+			<a href="https://www.youtube.com/"><img src="img/ytlogo.png"></a>
 		</div>
+
+		<div class="link__item">
+			<a href="https://twitter.com/"><img src="img/twlogo.png"></a>
+		</div>
+
+		</div>
+
+		<div class="email__section">
+			<h6>comicsproject.info | mail.ru</h6>
+		</div>
+
 
 	</div>
 </div>
@@ -67,6 +75,5 @@
 		Для дополнительной информации откройте вкладку контакты.
 		</h1>
 	</div>
-
 </body>
 </html>
