--- a/projectabout.html
+++ b/projectabout.html
@@ -4,12 +4,12 @@
 	
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="mainstyles.css">
+	<link rel="stylesheet" href="aboutstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.jpg" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
-	<title>ComicsProject | Main</title>
+	<title>ComicsProject | О нас</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/
@@ -38,24 +38,15 @@
 		</div>
 	</div>
 
+
 	<div class="content" class="box">
 
-		<div class="picture clearfix">
-				<div class="picture__item1 SW"></div>
+		<div class="content__banner clearfix"></div>
 
-				<div class="picture__item2 BATMAN"></div>
-		</div>
-
-		<div class="picture clearfix">
-				<div class="picture__item3 FLASH"></div>
-
-				<div class="picture__item4 SPIDER"></div>
-		</div>
-
-		<div class="picture clearfix">
-				<div class="picture__item5 SUPER"></div>
-
-				<div class="picture__item6 IRON"></div>
+		<div class="content__mainblock">
+			<div class="mainblock__text">
+				<h1>Comicsproject предназначен для всех людей, которым интересен мир комиксов. Здесь, вы сможете не только узнать немного больше о персонажах, из всем полюбившихся вселенных, но и открыть для себя нечто новое. Новости, издательства, самые популярные персонажи, замечательные арты - всё это есть у нас на сайте.<br/>Добро пожаловать!</h1>
+			</div>
 		</div>
 
 	</div>
@@ -67,6 +58,5 @@
 		Для дополнительной информации откройте вкладку контакты.
 		</h1>
 	</div>
-
 </body>
 </html>
