--- a/projectchar.html
+++ b/projectchar.html
@@ -31,8 +31,8 @@
 				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">Новости</a></li>
 				<li><a href="#">Комиксы</a></li>
-				<li><a href="#">О нас</a></li>
-				<li><a href="#">Контакты</a></li>
+				<li><a href="projectabout.html">О нас</a></li>
+				<li><a href="projectcontacts.html">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
 			</ul>
 		</div>
