--- a/projectabout.html
+++ b/projectabout.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 
 	<link rel="stylesheet" href="aboutstyles.css">
-	<link rel="shortcut icon" href="img/cpicon.jpg" type="image/x-icon">
+	<link rel="shortcut icon" href="img/cpicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
