--- a/projectNEWS.html
+++ b/projectNEWS.html
@@ -4,12 +4,12 @@
 	
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="contactsstyles.css">
+	<link rel="stylesheet" href="newsstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
-	<title>ComicsProject | Контакты</title>
+	<title>ComicsProject | Новости</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/
@@ -38,42 +38,11 @@
 		</div>
 	</div>
 
-
-	<div class="content" class="box">
-		
-		<div class="text__block">
-			<h5>Мы готовы к сотрудничеству, наши контакты представлены ниже:</h5>
+	<div class="content">
+		<div class="newsblock__youtube">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/fPlSqr3EAD8" frameborder="0" allowfullscreen></iframe>
 		</div>
-
-		<div class="links__section">
-
-		<div class="link__item">
-			<a href="www.facebook.com/‎"><img src="img/fblogo.png"></a>
-		</div>
-
-		<div class="link__item">
-			<a href="https://www.youtube.com/"><img src="img/ytlogo.png"></a>
-		</div>
-
-		<div class="link__item">
-			<a href="https://twitter.com/"><img src="img/twlogo.png"></a>
-		</div>
-
-		</div>
-
-		<div class="email__section">
-			<h6>comicsproject.info | mail.ru</h6>
-		</div>
-
-
 	</div>
 </div>
-
-	<div class="footer">
-		<h1 class="footer__text">
-		Comicsproject Demo Website <br/> 
-		Для дополнительной информации откройте вкладку контакты.
-		</h1>
-	</div>
 </body>
 </html>
