--- a/projectCOMICS.html
+++ b/projectCOMICS.html
@@ -4,12 +4,12 @@
 	
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="newsstyles.css">
+	<link rel="stylesheet" href="comicsstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
 
-	<title>ComicsProject | Новости</title>
+	<title>ComicsProject | Комиксы</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/
@@ -38,11 +38,22 @@
 		</div>
 	</div>
 
-	<div class="content">
-		<div class="newsblock__youtube">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/fPlSqr3EAD8" frameborder="0" allowfullscreen></iframe>
-		</div>
+
+	<div class="content" class="box">
+		<div class="content__item superman"><a href="#"><img src="img/superman.png"></a></div>
+		<div class="content__item fables"><a href="#"><img src="img/fables.png"></a></div>
+		<div class="content__item darth"><a href="#"><img src="img/darthmaul.png"></a></div>
+		<div class="content__item walking"><a href="#"><img src="img/walking.png"></a></div>
+		<div class="content__item iron"><a href="#"><img src="img/ironman.png"></a></div>
 	</div>
+
 </div>
+
+	<div class="footer">
+		<h1 class="footer__text">
+		Comicsproject Demo Website <br/> 
+		Для дополнительной информации откройте вкладку контакты.
+		</h1>
+	</div>
 </body>
 </html>
