--- a/projectabout.html
+++ b/projectabout.html
@@ -30,7 +30,7 @@
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">Новости</a></li>
-				<li><a href="#">Комиксы</a></li>
+				<li><a href="projectcomics.html">Комиксы</a></li>
 				<li><a href="projectabout.html">О нас</a></li>
 				<li><a href="projectcontacts.html">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
@@ -40,16 +40,18 @@
 
 
 	<div class="content" class="box">
-
-		<div class="content__banner clearfix"></div>
-
-		<div class="content__mainblock">
+		
 			<div class="mainblock__text">
-				<h1>Comicsproject предназначен для всех людей, которым интересен мир комиксов. Здесь, вы сможете не только узнать немного больше о персонажах, из всем полюбившихся вселенных, но и открыть для себя нечто новое. Новости, издательства, самые популярные персонажи, замечательные арты - всё это есть у нас на сайте.<br/>Добро пожаловать!</h1>
+				<h1>Comicsproject - это сайт о комиксах, который позволяет узнать немного нового об этом замечательном мире. Новости о комиксах, фильмах, издательства, самые популярные персонажи, замечательные арты - всё это есть у нас на сайте. Мы - новый сайт, но мы быстро развиваемся и стараемся сделать так, чтобы запомниться.<br/>Добро пожаловать!</h1>
 			</div>
-		</div>
 
+			<div class="mainblock__item">
+				
+			</div>
+
+	<hr>
 	</div>
+
 </div>
 
 	<div class="footer">
