--- a/projectchar.html
+++ b/projectchar.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="img/cpicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
-
+	
 	<title>ComicsProject | Batman</title>
 
 	<!--[if lt IE 9]>
@@ -30,7 +30,7 @@
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">Новости</a></li>
-				<li><a href="#">Комиксы</a></li>
+				<li><a href="projectcomics.html">Комиксы</a></li>
 				<li><a href="projectabout.html">О нас</a></li>
 				<li><a href="projectcontacts.html">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
@@ -41,8 +41,7 @@
 	<div class="content">
 
 		<div class="content__info">
-			<h1>Batman</h1>
-			<h3>Dc</h3>
+			<h1>Batman<br/>DC</h1>
 			<h5>Первое появление - 1939 Март<br/>Bill Finger/Bob Kane</h5>
 		</div>
 
@@ -59,12 +58,15 @@
 		</div>
 
 		<div class="section__addinfo">
-			<h3>Больше интересных фактов о герое.</h3>
+			<h3>Интересные факты</h3>
+			<p>В мае 2011 года Бэтмен занял 2 место в списке «Сто лучших героев комиксов всех времён» по версии IGN, уступив Супермену.</p>
+			<p>Несмотря на то, что Бэтмен не обладает суперспособностями, в реальности, учитывая все законы физиологии, такой человек смог бы прожить не более двух месяцев из за сильных физических нагрузок.</p>
+			<p>Бэтмен - один из самых популярных персонажей в мире. За долгие годы его существования на свет появилось огромное количество комиксов, видеоигр, фильмов.</p>
+			<p>Первый фильм о Бэтмене появился в 1949 году и был продолжением одноимённого сериала о супергерое. На данный момент существует достаточно много экранизаций о Бэтмане, а так же фильмы с его участием.</p>
 		</div>
 
-
 		<div class="section__slider">
-				<img src="img/batslider.png">
+  				<img src="img/batslider.png">
 		</div>
 
 	</div>
