--- a/projectcontacts.html
+++ b/projectcontacts.html
@@ -30,7 +30,7 @@
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">Новости</a></li>
-				<li><a href="#">Комиксы</a></li>
+				<li><a href="projectcomics.html">Комиксы</a></li>
 				<li><a href="projectabout.html">О нас</a></li>
 				<li><a href="projectcontacts.html">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
@@ -40,11 +40,11 @@
 
 
 	<div class="content" class="box">
-		
+		<hr>
 		<div class="text__block">
 			<h5>Мы готовы к сотрудничеству, наши контакты представлены ниже:</h5>
 		</div>
-
+		<hr>
 		<div class="links__section">
 
 		<div class="link__item">
@@ -65,8 +65,9 @@
 			<h6>comicsproject.info | mail.ru</h6>
 		</div>
 
-
+	<hr>
 	</div>
+
 </div>
 
 	<div class="footer">
