--- a/projectdc.html
+++ b/projectdc.html
@@ -30,7 +30,7 @@
 			<ul class="container__navmenu">
 				<li><a href="projectmarvel.html">Marvel</a></li>
 				<li><a href="#">Новости</a></li>
-				<li><a href="#">Комиксы</a></li>
+				<li><a href="projectcomics.html">Комиксы</a></li>
 				<li><a href="projectabout.html">О нас</a></li>
 				<li><a href="projectcontacts.html">Контакты</a></li>
 				<li><a href="projectdc.html">Dc</a></li>
@@ -127,6 +127,7 @@
 				</div>
 
 		</div>
+		<hr>
 	</div>
 </div>
 
