--- a/about.html
+++ b/about.html
@@ -28,26 +28,27 @@
 
 		<div class="container clearfix">
 			<ul class="container__navmenu">
-				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="projectcomics.html">Комиксы</a></li>
-				<li><a href="projectabout.html">О нас</a></li>
-				<li><a href="projectcontacts.html">Контакты</a></li>
-				<li><a href="projectdc.html">Dc</a></li>
+				<li><a href="marvel.html">Marvel</a></li>
+				<li><a href="news.html">Новости</a></li>
+				<li><a href="comics.html">Комиксы</a></li>
+				<li><a href="about.html">О нас</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="dc.html">Dc</a></li>
 			</ul>
 		</div>
 	</div>
 
 
 	<div class="content" class="box">
-		
-			<div class="mainblock__text">
-				<h1>Comicsproject - это сайт о комиксах, который позволяет узнать немного нового об этом замечательном мире. Новости о комиксах, фильмах, издательства, самые популярные персонажи, замечательные арты - всё это есть у нас на сайте. Мы - новый сайт, но мы быстро развиваемся и стараемся сделать так, чтобы запомниться.<br/>Добро пожаловать!</h1>
-			</div>
-
 			<div class="mainblock__item">
 				
 			</div>
+
+			<div class="mainblock__text">
+				<h1>Comicsproject - это современный проект, посвященный комиксам, который позволяет узнать немного нового об этом замечательном мире. Наша цель - создать сайт как можно приятнее и удобнее.
+				Новости, издательства, самые популярные персонажи - всё это есть у нас на сайте. Мы - новый проект, но мы быстро развиваемся и стараемся сделать так, чтобы запомниться.<br/>Добро пожаловать!</h1>
+			</div>
+
 
 	<hr>
 	</div>
