--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="mainstyles.css">
+	<link rel="stylesheet" href="indexstyles.css">
 	<link rel="shortcut icon" href="img/cpicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
 	<script src="#"></script>
@@ -28,12 +28,12 @@
 
 		<div class="container clearfix">
 			<ul class="container__navmenu">
-				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="projectcomics.html">Комиксы</a></li>
-				<li><a href="projectabout.html">О нас</a></li>
-				<li><a href="projectcontacts.html">Контакты</a></li>
-				<li><a href="projectdc.html">Dc</a></li>
+				<li><a href="marvel.html">Marvel</a></li>
+				<li><a href="news.html">Новости</a></li>
+				<li><a href="comics.html">Комиксы</a></li>
+				<li><a href="about.html">О нас</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="dc.html">Dc</a></li>
 			</ul>
 		</div>
 	</div>
