--- a/news.html
+++ b/news.html
@@ -28,12 +28,12 @@
 
 		<div class="container clearfix">
 			<ul class="container__navmenu">
-				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="projectcomics.html">Комиксы</a></li>
-				<li><a href="projectabout.html">О нас</a></li>
-				<li><a href="projectcontacts.html">Контакты</a></li>
-				<li><a href="projectdc.html">Dc</a></li>
+				<li><a href="marvel.html">Marvel</a></li>
+				<li><a href="news.html">Новости</a></li>
+				<li><a href="comics.html">Комиксы</a></li>
+				<li><a href="about.html">О нас</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="dc.html">Dc</a></li>
 			</ul>
 		</div>
 	</div>
@@ -42,7 +42,17 @@
 		<div class="newsblock__youtube">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/fPlSqr3EAD8" frameborder="0" allowfullscreen></iframe>
 		</div>
+		<div class="newsblock__more"></div>
+		<hr>
 	</div>
 </div>
+
+<div class="footer">
+		<h1 class="footer__text">
+		Comicsproject Demo Website <br/> 
+		Для дополнительной информации откройте вкладку контакты.
+		</h1>
+	</div>
+
 </body>
 </html>
