--- a/marvel.html
+++ b/marvel.html
@@ -28,12 +28,12 @@
 
 		<div class="container clearfix">
 			<ul class="container__navmenu">
-				<li><a href="projectmarvel.html">Marvel</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="projectcomics.html">Комиксы</a></li>
-				<li><a href="projectabout.html">О нас</a></li>
-				<li><a href="projectcontacts.html">Контакты</a></li>
-				<li><a href="projectdc.html">Dc</a></li>
+				<li><a href="marvel.html">Marvel</a></li>
+				<li><a href="news.html">Новости</a></li>
+				<li><a href="comics.html">Комиксы</a></li>
+				<li><a href="about.html">О нас</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="dc.html">Dc</a></li>
 			</ul>
 		</div>
 	</div>
@@ -42,10 +42,10 @@
 	<div class="content" class="box">
 
 		<div class="content__banner clearfix"></div>
-	
 			<div class="content__text">
 				<h1>Самые популярные<br/>Персонажи Издательства</h1>
 			</div>
+
 
 		<div class="content__logos clearfix">
 
